# framework_tmp

./: .gitignore
app/: CMakeLists.txt  README.md
app/src/: CMakeLists.txt
app/src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
app/src/app/qml/: DragTile.qml  EffectPanel.qml  Main.qml  MyListModel.qml  resources.qrc
app/src/context/: CMakeLists.txt  contextmodule.cpp  contextmodule.h
buildscripts/ci/checkcodestyle/: checkcodestyle.cmake  ci_files.cmake  run_scan.sh  uncrustify_muse.cfg
buildscripts/ci/checkcodestyle/tools/linux/: uncrustify_074
buildscripts/ci/windows/: build.bat  package.bat  setup.bat  sign.bat
buildscripts/packaging/Windows/PortableApps/: appinfo.ini.in
buildscripts/packaging/Windows/PortableApps/App/AppInfo/Launcher/: MuseScorePortable.ini
buildscripts/tools/: cmake_wrapper.bat
framework/: CMakeLists.txt
framework/audio/internal/: audiooutputdevicecontroller.h
framework/audio/internal/platform/win/: wasapiaudioclient.cpp  wasapiaudioclient.h  wasapiaudiodriver.cpp  wasapiaudiodriver.h
framework/audioplugins/internal/: registeraudiopluginsscenario.cpp
framework/extensions/internal/: extensionrunner.h
framework/global/: CMakeLists.txt  globalmodule.cpp
framework/global/concurrency/: taskscheduler.h
framework/midi/: miditypes.h
framework/shortcuts/: CMakeLists.txt
framework/shortcuts/internal/: shortcutscontroller.cpp
framework/ui/: uitypes.h
framework/ui/view/: iconcodes.h
framework/uicomponents/qml/Muse/UiComponents/: ContextMenuLoader.qml  StyledMenuLoader.qml
framework/uicomponents/qml/Muse/UiComponents/internal/: StyledMenu.qml
framework/uicomponents/view/: menuview.cpp  menuview.h  popupview.cpp  popupview.h
framework/uicomponents/view/internal/: popupviewclosecontroller.cpp  popupviewclosecontroller.h
framework/uicomponents/view/internal/platform/macos/: macospopupviewclosecontroller.h  macospopupviewclosecontroller.mm
framework/vst/: ivstconfiguration.h
framework/vst/internal/: vstconfiguration.cpp  vstconfiguration.h  vstplugin.cpp  vstplugin.h
framework/vst/internal/synth/: vstsynthesiser.cpp  vstsynthesiser.h
framework/vst/view/: vstview.cpp  vstview.h
framework/workspace/: workspacetypes.h
src/framework/global/: logremover.h
